ubuntu.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-ubuntu-pod
  labels:
    app: webapi
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["/bin/sleep", "10d"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
