webapi-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: something-api-pod
  labels:
    app: webapi
spec:
  containers:
    - name: something-api
      image: something-api:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
