webapi-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi-svc
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: webapi
