webapi-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080  # the port the app in the container uses
    nodePort: 32222   # the port that will expose the target port 
    protocol: TCP
  selector:
    app: webapi
